--- a/css/nav.css
+++ b/css/nav.css
@@ -14,11 +14,18 @@
   font-family: "Philosopher", sans-serif;
 }
 
+.navbar {
+  height: 56px;
+  background: #fcc5e9;
+  width: 100%;
+}
+
 .navbar-brand {
   padding: 0;
-  height: 56px;
+  height: 40px;
+  width: 130px;
   aspect-ratio: 1;
-  background: url("../svg/logos/b_2.svg") no-repeat center;
+  background: url("../svg/logos/bl2.svg") no-repeat center;
   background-size: cover;
-  filter: drop-shadow(0 0 1px #323232);
+  filter: drop-shadow(0 0 1px #a6eaff);
 }/*# sourceMappingURL=nav.css.map */
