--- a/css/nav.css
+++ b/css/nav.css
@@ -16,8 +16,23 @@
 
 .navbar {
   height: 56px;
-  background: #fcc5e9;
   width: 100%;
+  background: #ffd7f1;
+}
+.navbar .container-fluid {
+  background-color: inherit;
+}
+.navbar *,
+.navbar *:hover {
+  color: #0c140e;
+}
+
+.dropdown-menu {
+  background: #A8DBBA;
+}
+.dropdown-menu a:hover {
+  background-color: #A8DBBA;
+  color: black;
 }
 
 .navbar-brand {
@@ -27,5 +42,5 @@
   aspect-ratio: 1;
   background: url("../svg/logos/bl2.svg") no-repeat center;
   background-size: cover;
-  filter: drop-shadow(0 0 1px #a6eaff);
+  filter: drop-shadow(0 0 2px #333);
 }/*# sourceMappingURL=nav.css.map */
