--- a/css/home.css
+++ b/css/home.css
@@ -30,20 +30,20 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../img/spa.jpg") no-repeat center 20% border-box;
+  background: url("../img/spa.jpg") no-repeat center 35% border-box;
   background-size: cover;
 }
 .home__bg-filter {
   height: 100%;
   width: 100%;
-  background: rgba(193, 104, 172, 0.4);
+  background: rgba(193, 104, 172, 0.5);
   filter: grayscale(100%) saturate(0%) sepia(0.6) hue-rotate(287deg) saturate(150%) brightness(111%);
 }
 .home__logo {
   position: absolute;
   height: clamp(250px, 80% - 56px, 600px);
   width: clamp(250px, 80% - 56px, 600px);
-  filter: drop-shadow(0 0 1px #a6eaff);
+  filter: drop-shadow(0 0 2px #333);
 }
 
 .svg-border {
