--- a/css/layout.css
+++ b/css/layout.css
@@ -32,15 +32,12 @@ body main {
   scroll-behavior: smooth;
 }
 body main section {
-  min-height: calc(50vh - 56px);
+  min-height: 100vh;
   padding: 26px 0;
 }
 body main section:first-child {
   height: 100vh;
   min-height: 100vh;
-}
-body main section:nth-child(even) {
-  background-color: greenyellow;
 }
 body footer {
   position: relative;
