--- a/css/services.css
+++ b/css/services.css
@@ -22,46 +22,44 @@
 }
 .services__title {
   text-align: center;
+  text-decoration: underline;
 }
-.services__container {
+.services__menu {
+  margin: 30px 0;
+  padding: 0;
+  list-style: none;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+.services__menu li {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #ffd7f1;
-}
-.services__container-menu {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.services__container-menu-label {
-  width: 100%;
-  font-size: 1.5rem;
   text-align: center;
-  padding: 20px 0;
+  padding: 8px 0;
 }
-.services__container-menu-select {
+.services__menu li::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #A8DBBA;
+  transition: 0.2s ease-out;
+}
+.services__menu li:hover::before {
   width: 100%;
+}
+.services__content {
+  padding: 20px;
+}
+.services__content-header {
+  position: relative;
+  text-align: center;
+}
+.services__content-header__select {
+  display: none;
+}
+.services__content-header__select-option {
+  background-color: transparent;
   border: none;
-  background: #ffd7f1;
-  padding: 10px;
-  border-radius: 10px;
-}
-.services__container-menu-select-option {
-  background-color: goldenrod;
-}
-.services__container-content {
-  width: 80%;
-}
-.services__container-content-list {
-  padding: 0;
-}
-.services__container-content-list-item {
-  padding: 5px 0;
-  border-bottom: 2px solid #A8DBBA;
 }/*# sourceMappingURL=services.css.map */
