--- a/css/services.css
+++ b/css/services.css
@@ -54,12 +54,80 @@
 }
 .services__content-header {
   position: relative;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  margin: 30px 0;
+}
+.services__content-header-title {
+  position: relative;
+  left: -500px;
+  flex-grow: 1;
+  animation: float-left-to-right 0.2s ease-in forwards;
+}
+.services__content-header-title::before {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  top: -35px;
+  left: -300px;
+  width: 700px;
+  height: 100px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 .services__content-header__select {
-  display: none;
+  width: clamp(300px, 50%, 50%);
+  background-color: #A8DBBA;
+  border: none;
+  height: 30px;
+  border-radius: 0.3em;
+  text-align: center;
+  margin: 40px auto;
 }
 .services__content-header__select-option {
   background-color: transparent;
   border: none;
+  height: 30px;
+  border-radius: none;
+}
+.services__content-body__list {
+  font-size: 1em;
+}
+.services__content-body__list-item {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border-bottom: 3px solid #A8DBBA;
+  overflow: visible;
+  padding: 15px 0;
+}
+.services__content-body__list-item-title {
+  margin: 0 auto;
+}
+.services__content-body__list-item-discription {
+  position: relative;
+  width: 100%;
+}
+.services__content-body__list-item-discription::before {
+  position: relative;
+  content: "*";
+  color: #0c140e;
+}
+.services__content-body__list-item__extras {
+  position: relative;
+  width: 100%;
+}
+.services__content-body__list-item__extras-item {
+  display: flex;
+  justify-content: space-between;
+}
+.services__content-body__list-item__extras-item::before {
+  content: url("../svg/listStyle/list_style.svg");
+  position: absolute;
+  left: 0;
+}
+
+@keyframes float-left-to-right {
+  to {
+    left: 0;
+  }
 }/*# sourceMappingURL=services.css.map */
