--- a/css/contact.css
+++ b/css/contact.css
@@ -15,8 +15,9 @@
 }
 
 .contact__title {
+  text-decoration: underline;
   text-align: center;
-  margin: 30px 0;
+  margin: 50px 0;
 }
 .contact__row__col {
   height: 300px;
