--- a/css/home.css
+++ b/css/home.css
@@ -30,53 +30,6 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("../img/spa.jpg") no-repeat center 35% border-box;
-  background-size: cover;
-}
-.home__bg-filter {
-  height: 100%;
-  width: 100%;
-  background: rgba(193, 104, 172, 0.4);
-  filter: grayscale(100%) saturate(0%) sepia(0.6) hue-rotate(287deg) saturate(150%) brightness(111%);
-}
-.home__logo {
-  position: absolute;
-  height: clamp(250px, 80% - 56px, 600px);
-  width: clamp(250px, 80% - 56px, 600px);
-  filter: drop-shadow(0 0 2px #333);
-}
-
-.svg-border {
-  fill-opacity: 0;
-  fill: #fff;
-  animation: fill-border 0s 2.1s forwards;
-  stroke-linecap: round;
-}
-.svg-border__inner {
-  stroke-dashoffset: 650;
-  stroke-dasharray: 650;
-  animation: draw-border 2s forwards;
-}
-
-@keyframes draw-border {
-  to {
-    stroke-dasharray: 0;
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes fill-border {
-  to {
-    fill-opacity: 1;
-  }
-}
-.fade-in {
-  animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  background: url("../img/spa.png") no-repeat center;
+  background-size: 80vh;
 }/*# sourceMappingURL=home.css.map */
